Replace Tomcat's own base64 encoder with the one from the JRE.
git-svn-id: https://svn.apache.org/repos/asf/tomcat/trunk@1458738 13f79535-47bb-0310-9956-ffa450edef68